[gd_scene load_steps=24 format=2]

[ext_resource path="res://btn_pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://btn_normal.tres" type="StyleBox" id=2]
[ext_resource path="res://btn_hover.tres" type="StyleBox" id=3]
[ext_resource path="res://fonts/Route 26.otf" type="DynamicFontData" id=4]
[ext_resource path="res://MenuScreen.gd" type="Script" id=5]
[ext_resource path="res://BifurcationTrack.tscn" type="PackedScene" id=6]
[ext_resource path="res://Water.tscn" type="PackedScene" id=7]
[ext_resource path="res://missile_model.tscn" type="PackedScene" id=8]
[ext_resource path="res://fire_model.tscn" type="PackedScene" id=9]
[ext_resource path="res://Man2.tscn" type="PackedScene" id=10]
[ext_resource path="res://fireball_model.tscn" type="PackedScene" id=11]
[ext_resource path="res://Island2.tscn" type="PackedScene" id=12]
[ext_resource path="res://PirateShip.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.698039, 0.972549, 1, 0.627451 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0117647, 0.176471, 0.180392, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=7]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Environment" id=4]
background_mode = 1
background_color = Color( 0.435294, 0.788235, 1, 1 )
ambient_light_color = Color( 1, 0.92549, 0.780392, 1 )
ambient_light_energy = 0.5
fog_enabled = true
fog_color = Color( 0.435294, 0.788235, 1, 1 )
fog_depth_begin = 70.0
fog_depth_end = 250.0

[sub_resource type="CylinderMesh" id=5]
top_radius = 0.02
bottom_radius = 0.02
height = 1.0

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.372549, 0.207843, 0, 1 )

[node name="MenuScreen" type="Spatial"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -340.0
margin_right = 128.0
margin_bottom = -40.0
custom_constants/separation = 30

[node name="btnPlay" type="Button" parent="Control/VBoxContainer"]
margin_right = 256.0
margin_bottom = 80.0
rect_min_size = Vector2( 256, 80 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Play"

[node name="btnSettings" type="Button" parent="Control/VBoxContainer"]
margin_top = 110.0
margin_right = 256.0
margin_bottom = 190.0
rect_min_size = Vector2( 256, 80 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Settings"

[node name="btnExit" type="Button" parent="Control/VBoxContainer"]
margin_top = 220.0
margin_right = 256.0
margin_bottom = 300.0
rect_min_size = Vector2( 256, 80 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Exit"

[node name="Settings" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Control/Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -434.0
margin_top = -241.0
margin_right = 434.0
margin_bottom = 241.0
custom_styles/panel = SubResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -406.5
margin_top = -148.0
margin_right = 406.5
margin_bottom = 148.0
custom_constants/separation = 64
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Settings/VBoxContainer"]
margin_top = 32.0
margin_right = 813.0
margin_bottom = 120.0
custom_constants/separation = 64
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Settings/VBoxContainer/HBoxContainer"]
margin_right = 209.0
margin_bottom = 88.0
custom_constants/separation = 32
alignment = 1

[node name="LabelGVolume" type="Label" parent="Control/Settings/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 209.0
margin_bottom = 28.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 7 )
text = "Sound  volume"

[node name="LabelMVolume" type="Label" parent="Control/Settings/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 60.0
margin_right = 209.0
margin_bottom = 88.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 8 )
text = "Music volume"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Settings/VBoxContainer/HBoxContainer"]
margin_left = 273.0
margin_right = 813.0
margin_bottom = 88.0
rect_min_size = Vector2( 540, 16 )
custom_constants/separation = 42
alignment = 1

[node name="SliderGVolume" type="HSlider" parent="Control/Settings/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 7.0
margin_right = 540.0
margin_bottom = 23.0
rect_min_size = Vector2( 400, 10 )

[node name="SliderMVolume" type="HSlider" parent="Control/Settings/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 540.0
margin_bottom = 81.0
rect_min_size = Vector2( 400, 10 )

[node name="CenterContainer" type="CenterContainer" parent="Control/Settings/VBoxContainer"]
margin_top = 184.0
margin_right = 813.0
margin_bottom = 264.0

[node name="btnBack" type="Button" parent="Control/Settings/VBoxContainer/CenterContainer"]
margin_left = 278.0
margin_right = 534.0
margin_bottom = 80.0
rect_min_size = Vector2( 256, 80 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Back"

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.82998, -0.0356124, -0.556654, -0.250679, 0.915316, 0.315208, 0.49829, 0.401158, -0.768622, -17.7846, -13.948, -99.2208 )
far = 250.0

[node name="BifurcationTrack" parent="." instance=ExtResource( 6 )]
transform = Transform( -0.970456, -0.15771, -0.182598, -0.194477, 0.959223, 0.205109, 0.142804, 0.234561, -0.961555, -6.1365, -52.2579, -58.7256 )

[node name="Water" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.987485, -0.15771, 0, 0.153196, 0.959223, -0.237533, 0.0374614, 0.234561, 0.971379, -1.64127, -50.6259, 1.04922 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="missile" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.95057, -8.70023e-07, 24.8253, -24.8253, 1.87426e-06, -2.95057, -1.75847e-06, -25, -1.08515e-06, -14.579, -14.0277, -92.1937 )

[node name="OmniLight" type="OmniLight" parent="missile"]
transform = Transform( 0.0666667, 9.31323e-10, -3.47623e-17, -9.31323e-10, 0.0666667, -2.48838e-09, 0, 2.48838e-09, 0.0666667, 0.00086689, 0.00371885, 0.000606537 )
light_color = Color( 1, 0.74902, 0.00392157, 1 )
light_energy = 5.0
omni_range = 1.0

[node name="fire" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.00490654, -0.0220586, -0.0446021, -0.0495509, 0.00192505, -0.00640301, 0.00454206, 0.0448298, -0.0216716, -14.7882, -13.9596, -90.8952 )

[node name="missile2" parent="." instance=ExtResource( 8 )]
transform = Transform( -12.6053, -5.04696e-08, 21.5895, -21.5895, 2.06573e-06, -12.6053, -1.75847e-06, -25, -1.08515e-06, -11.5541, -14.0277, -92.1937 )

[node name="OmniLight" type="OmniLight" parent="missile2"]
transform = Transform( 0.0666667, 9.31323e-10, -3.47623e-17, -9.31323e-10, 0.0666667, -2.48838e-09, 0, 2.48838e-09, 0.0666667, 0.00086689, 0.00371885, 0.000606537 )
light_color = Color( 1, 0.74902, 0.00392157, 1 )
light_energy = 5.0
omni_range = 1.0

[node name="fire2" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.00490654, -0.0220586, -0.0446021, -0.0495509, 0.00192505, -0.00640301, 0.00454206, 0.0448298, -0.0216716, -11.7632, -13.9596, -90.8952 )

[node name="missile3" parent="." instance=ExtResource( 8 )]
transform = Transform( 10.4427, -1.72047e-06, 22.7145, -22.7145, 1.14444e-06, 10.4427, -1.75847e-06, -25, -1.08515e-06, -11.0579, -12.0721, -92.1937 )

[node name="OmniLight" type="OmniLight" parent="missile3"]
transform = Transform( 0.0666667, 9.31323e-10, -3.47623e-17, -9.31323e-10, 0.0666667, -2.48838e-09, 0, 2.48838e-09, 0.0666667, 0.00086689, 0.00371885, 0.000606537 )
light_color = Color( 1, 0.74902, 0.00392157, 1 )
light_energy = 5.0
omni_range = 1.0

[node name="fire3" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.0300516, -0.0198194, -0.0347, -0.0397023, -0.00987314, -0.0287446, 0.00454206, 0.0448298, -0.0216716, -11.2718, -12.1233, -90.8952 )

[node name="Man2" parent="." instance=ExtResource( 10 )]
transform = Transform( -0.910739, -0.161485, -0.3801, -0.227886, 0.964081, 0.136439, 0.344415, 0.21088, -0.914827, -8.36524, -18.0091, -97.0617 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( -0.273222, -0.0484454, -0.11403, -0.0789834, 0.28084, 0.0699341, 0.0954539, 0.0937134, -0.268526, 11.4767, -25.5864, -70.0215 )

[node name="icosphere1" parent="Spatial" instance=ExtResource( 11 )]
transform = Transform( 7, -1.19209e-07, -2.86102e-06, -7.15256e-07, 7, 3.09944e-06, 3.57628e-07, 0, 7, -5.79519, -0.108658, 27.1773 )

[node name="icosphere2" parent="Spatial" instance=ExtResource( 11 )]
transform = Transform( 7, -1.19209e-07, -2.86102e-06, -7.15256e-07, 7, 3.09944e-06, 3.57628e-07, 0, 7, -5.79519, -0.108658, 27.1773 )

[node name="icosphere3" parent="Spatial" instance=ExtResource( 11 )]
transform = Transform( 7, -1.19209e-07, -2.86102e-06, -7.15256e-07, 7, 3.09944e-06, 3.57628e-07, 0, 7, -5.79519, -0.108658, 27.1773 )

[node name="Spatial2" type="Spatial" parent="."]
transform = Transform( -0.273222, -0.0484454, -0.11403, -0.0789834, 0.28084, 0.0699341, 0.0954539, 0.0937134, -0.268526, -29.0469, -38.9583, -25.7538 )

[node name="icosphere1" parent="Spatial2" instance=ExtResource( 11 )]
transform = Transform( 1.69525, -7.53058, 6.35739, -1.2382, 6.23691, 7.718, -9.77717, -2.09558, 0.124869, -5.79521, -0.108643, 27.1773 )

[node name="icosphere2" parent="Spatial2" instance=ExtResource( 11 )]
transform = Transform( 1.69525, -7.53058, 6.35739, -1.2382, 6.23691, 7.718, -9.77717, -2.09558, 0.124869, -5.79521, -0.108643, 27.1773 )

[node name="icosphere3" parent="Spatial2" instance=ExtResource( 11 )]
transform = Transform( 1.69525, -7.53058, 6.35739, -1.2382, 6.23691, 7.718, -9.77717, -2.09558, 0.124869, -5.79521, -0.108643, 27.1773 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.3074, -12.8001, -97.9814 )
mesh = SubResource( 5 )
skeleton = NodePath("")
material/0 = SubResource( 6 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.954808, -0.206954, -0.213337, -0.0847844, -0.877583, 0.471868, -0.284876, -0.432456, -0.855469, -18.8731, -7.58195, -111.475 )
light_color = Color( 1, 0.890196, 0.396078, 1 )
light_energy = 0.75
spot_range = 100.0

[node name="Island2" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.989079, -0.140531, 0.0444272, 0.147198, 0.957106, -0.24956, -0.00745059, 0.253375, 0.96734, 145.117, -33.3976, 22.0746 )

[node name="PirateShip" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.992707, -0.120553, 0, 0.115748, 0.95314, -0.279511, 0.0336958, 0.277472, 0.960143, 174.613, -9.40555, -66.741 )

[connection signal="pressed" from="Control/VBoxContainer/btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/btnSettings" to="." method="_on_btnSettings_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/btnExit" to="." method="_on_btnExit_pressed"]
[connection signal="value_changed" from="Control/Settings/VBoxContainer/HBoxContainer/VBoxContainer/SliderGVolume" to="." method="_on_SliderGVolume_value_changed"]
[connection signal="value_changed" from="Control/Settings/VBoxContainer/HBoxContainer/VBoxContainer/SliderMVolume" to="." method="_on_SliderMVolume_value_changed"]
[connection signal="pressed" from="Control/Settings/VBoxContainer/CenterContainer/btnBack" to="." method="_on_btnBack_pressed"]
